add chat + audio
